--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -301,33 +301,35 @@
 	    <p>The federal tax Ellis owes is $7,800. </p>
       <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
         <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$52,000 (Taxable income)</span></li>
-        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount)</span> </li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount of the tax threshold)</span> </li>
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$52,000</span></li>
         <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,800</span></li>
         <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
-        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,800</strong> (Total federal tax owed)</span></li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,800</strong> (Total federal income tax owed)</span></li>
       </ul>
 
 	    
       <p class="h3">Provincial tax</p>
-      <p>The first $53,359 is taxed at 15% (the first tax threshold), which equals $8,003.85.</p>
-      <p>The remaining amount of $1,641 ($55,000 – $53,359) is taxed at 20.5% (the next tax threshold), which equals $336.41. </p>
-      <p>The federal tax Ellis owes is $8,340.26 ($8,003.85 + $336.41). </p>
-        <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
-        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$49,000 (Taxable income)</span></li>
-        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount)</span> </li>
-        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$49,000</span></li>
-        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
-        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,350</span></li>
-        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
-        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,350</strong> (Total federal tax owed)</span></li>
+          <p>$52,000 is subtracted from $53,359 ($52,000 – $53,359 = -$1,359). </p>
+      <p>The calculation cannot result in a negative number. If it does, the base amount is "0". </p>
+      <p>$52,000 is taxed at 9.5% (the second tax threshold), which equals $4,758. </p>
+	    <p>Since the base amount is “0”, there is no tax on the tax rate. </p>
+	    <p>The provincial tax Ellis owes is $4,758. </p>
+      <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$52,000 (Taxable income)</span></li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount of the tax threshold)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$52,000</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">9.5% (Tax rate)</span></li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$4,758</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 9.5%)</span> </li>
+        <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$4,758</strong> (Total provincial income tax owed)</span></li>
       </ul>
 	    <p class="h3">Combined tax rate</p>
-	    <p>Ellis' total tax owing is $11,354.29</p>
+	    <p>Ellis' total tax owing is <strong>$12,558</strong>.</p>
 	     <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
-        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$8,340.26 (Federal tax owed)</span></li>
-        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">plus</span></span><span class="h6">$3,014.03 (Provincial tax owed)</span> </li>
+        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$7,800 (Total federal income tax owed)</span></li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus</span></span><span class="h6">$3,014.03 (Total provincial income tax owed)</span> </li>
         <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$11,354.29</strong></span></li>
 	     </ul>
     </details>
