--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -177,6 +177,8 @@
 
 </script--></div>
   <div class="mwsbodytext text parbase section">
+	    <section class=" row mrgn-bttm-xl">
+            <div class="col-md-8">
     <h2 id="toc1">2023 - Federal rates</h2>
 	    <p>Identify your taxable income threshold (tax bracket).</p> 
 	  <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
