--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -403,7 +403,7 @@
     <h2 id="toc4">Tax rates for previous years</h2>
     <p>Select the tax year to see the federal rate, then select the province or territory to see its rate.</p>
     <details>
-      <summary class="max-content">2022</summary>
+      <summary>2022</summary>
       <div class="mwsgeneric-base-html parbase section">
         <div data-json-replace="#[income-tax-rates]/federalRates/variations/2022/value"> </div>
     
@@ -473,7 +473,7 @@
 	    
     </details>
     <details>
-      <summary class="max-content">2021</summary>
+      <summary>2021</summary>
       <div data-json-replace="#[income-tax-rates]/federalRates/variations/2021/value"> </div>
      <div class="wb-frmvld fieldflow-lg max-content">
       <form>
