populates previous prov/terr rates

--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -413,60 +413,60 @@
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
           <p class="wb-inv">Choose your region</p>
           <ul>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#manitoba&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Manitoba</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#newBrunswick&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">New Brunswick</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#newfoundlandAndLabrador&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Newfoundland and Labrador</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#northwestTerritories&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Northwest Territories</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#novaScotia&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Nova Scotia</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#nunavut&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Nunavut</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#ontario&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Ontario</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#princeEdwardIsland&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Prince Edward Island</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#quebec&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Quebec</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#saskatchewan&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Saskatchewan</li>
-            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#yukon&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Yukon</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#manitoba-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Manitoba</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#newBrunswick-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">New Brunswick</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#newfoundlandAndLabrador-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Newfoundland and Labrador</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#northwestTerritories-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Northwest Territories</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#novaScotia-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Nova Scotia</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#nunavut-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Nunavut</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#ontario-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Ontario</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#princeEdwardIsland-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Prince Edward Island</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#quebec-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Quebec</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#saskatchewan-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Saskatchewan</li>
+            <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#yukon-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Yukon</li>
           </ul>
         </div>
       </form>
 
-    <div id="alberta" class="province-display hidden">
+    <div id="alberta-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/alberta/variations/2022/value"></div>
     </div>
-    <div id="britishColumbia" class="province-display hidden">
+    <div id="britishColumbia-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/britishColumbia/variations/2022/value"></div>
     </div>
-    <div id="manitoba" class="province-display hidden">
+    <div id="manitoba-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/manitoba/variations/2022/value"></div>
     </div>
-    <div id="newBrunswick" class="province-display hidden">
+    <div id="newBrunswick-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/newBrunswick/variations/2022/value"></div>
     </div>
-    <div id="newfoundlandAndLabrador" class="province-display hidden">
+    <div id="newfoundlandAndLabrador-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/newfoundlandAndLabrador/variations/2022/value"></div>
     </div>
-    <div id="northwestTerritories" class="province-display hidden">
+    <div id="northwestTerritories-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/northwestTerritories/variations/2022/value"></div>
     </div>
-    <div id="novaScotia" class="province-display hidden">
+    <div id="novaScotia-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/novaScotia/variations/2022/value"></div>
     </div>
-    <div id="nunavut" class="province-display hidden">
+    <div id="nunavut-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/nunavut/variations/2022/value"></div>
     </div>
-    <div id="ontario" class="province-display hidden">
+    <div id="ontario-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/ontario/variations/2022/value"></div>
     </div>
-    <div id="princeEdwardIsland" class="province-display hidden">
+    <div id="princeEdwardIsland-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/princeEdwardIsland/variations/2022/value"></div>
     </div>
-    <div id="quebec" class="province-display hidden">
+    <div id="quebec-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/quebec/variations/2022/value"></div>
     </div>
-    <div id="saskatchewan" class="province-display hidden">
+    <div id="saskatchewan-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/saskatchewan/variations/2022/value"></div>
     </div>
-    <div id="yukon" class="province-display hidden">
+    <div id="yukon-2022" class="province-display hidden">
       <div data-json-replace="#[income-tax-rates]/yukon/variations/2022/value"></div>
     </div>
       </div>
