--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -277,8 +277,8 @@
 	  
  <section>
 	 <section>
-		 <fieldset class="gc-chckbxrdio">
-                  <ul class="checkbox-lg checkbox-zebra">
+		 <fieldset class="chcklst chcklst2">
+                  <ul class="gc-chckbxrdio checkbox-lg checkbox-zebra">
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
                         <label for="eg1">You are 18 years of age or older</label>
