--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -312,8 +312,8 @@
 	  
  <section>
 	 <section>
-		 <fieldset class="gc-chckbxrdio">
-                  <ul class="checkbox-lg checkbox-zebra">
+		 <fieldset>
+                  <ul class="checkbox-zebra gc-chckbxrdio">
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
                         <label for="eg1">You are 18 years of age or older</label>
