--- a/cops/service-feedback/sf-2.html
+++ b/cops/service-feedback/sf-2.html
@@ -102,19 +102,34 @@
 <p>Submit a complaint about the CRA</p>
 </div></div>-->
 	<div class="clear"></div>
-	<!--<h3>Compliment</h3>
-	<p>You can submit feedback about a positive experience with the service that you received from the CRA. Your feedback will be forwarded onto the responsible manager and/or employee for recognition. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
-	<h3>Suggestion</h3>
-	<p>You can submit a feedback on a suggestion about improving the CRA service(s). Your feedback will be forwarded to the appropriate office or program area for consideration. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
-	<h3>Complaint</h3>
-	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
+	
 	<h2 id="toc1">Service feedback</h2>
 
 	<h3>Steps to submit service feedback</h3>
 	
 	<ol class="lst-stps">
-<li><h4>Contact the CRA</h4>
-	<p>First try to resolve your concerns by calling the: </p>
+<li><h4>File service feedback</h4>
+	<p>There are two ways: </p>
+<div class="cnjnctn-type-or">
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">Use the form<span class="wb-inv">: Option 1 of X</span></h4>
+<p>Submit a positive experience with the CRA</p>
+</div>
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">Call the CRA<span class="wb-inv">: Option 2 of X</span></h4>
+<p>Suggest an improvement for the CRA</p>
+</div>
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">Send a letter<span class="wb-inv">: Option 3 of X</span></h4>
+<p>Submit a complaint about the CRA</p>
+</div></div>-->
+	<div class="clear"></div>
+
+
+
+
+
+	
 	<ul>
 		<li>CRA employee you have been dealing with</li>
 		<li>Telephone number provided in your CRA correspondence</li>
