--- a/cops/service-feedback/sf-2.html
+++ b/cops/service-feedback/sf-2.html
@@ -108,9 +108,9 @@
 	<h3>Steps to submit service feedback</h3>
 	
 	<ol class="lst-stps">
-<li><h4>File service feedback</h4>
-	<p>There are two ways: </p>
-<div class="cnjnctn-type-or">
+<li><h4>Call the CRA</h4>
+	<p>Resolve your concerns by calling: </p>
+<!--<div class="cnjnctn-type-or">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Use the form<span class="wb-inv">: Option 1 of X</span></h4>
 <p>Submit a positive experience with the CRA</p>
@@ -122,8 +122,8 @@
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Send a letter<span class="wb-inv">: Option 3 of X</span></h4>
 <p>Submit a complaint about the CRA</p>
-</div></div>-->
-	<div class="clear"></div>
+</div></div>
+	<div class="clear"></div>-->
 
 
 
@@ -171,84 +171,12 @@ CANADA</p>
 		</div></div>
 	
 </li><div class="clear"></div>
-<li><h4>Contact the Office of the Taxpayers' Ombudsperson</h4>
-<p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>. Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p> 
+<li><h4>Send a letter</h4>
+<p>You can send a letter to the CRA. </p> 
 </li>
 </ol>
 	
-<!--<h3>Talk to us first</h3>
-	<p>You can try to resolve your concerns with the CRA employee you have been dealing with or call the telephone number provided in the CRA's correspondence. If you do not have the contact information, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact the Canada Revenue Agency</a>. If you still disagree with the way your concerns were addressed, you can ask to discuss the matter with the employee's supervisor. If you are still not satisfied, you can file a service complaint.</p>
-	
-<h3>File a service feedback using 1 of these methods</h3>
 
-	<div class="col-md-9">
-	<div class="cnjnctn-type-or cnjnctn-xs">
-<div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">Online form <span class="wb-inv">: Option 1 of 2</span></h4>
-<p>Complete and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">Online service feedback application form - RC193</a></p>
-</div>
-<div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">PDF form <span class="wb-inv">: Option 2 of 2</span></h4>
-<p>Fill out your form on the  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc193.html">PDF version of the form - RC193</a> </p>
-	<details>
-<summary>Ways to submit your PDF form to the CRA</summary>
-   <h4>Online with 1 of the CRA sign in services</h4>
-
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html">My Account</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My Business Account</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></li>
-</ul>
-<h4>By fax</h4>
-<ul>
-<li><span class="nowrap">1-866-388-7371</span> from Canada or the United States.</li>
-<li><span class="nowrap">1-819-536-0701</span> from outside Canada and the United States.</li>
-</ul>
-<h4>By mail</h4>
-<p>CRA Service Feedback<br>
-National Intake Centre<br>
-4695 Shawinigan-Sud Boulevard<br>
-Shawinigan QC&nbsp; G9P 5H9<br>
-CANADA</p>
- </details>
-		</div></div></div>	
-	
-<h3>Contact the Office of the Taxpayers' Ombudsperson</h3>
-	<p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>.</p>
-<p>Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p>
-
-
-
-	
-	
-	
-	<ul>
-		<li>Online dynamic form</li>	
-		<li>Fillable PDF form RC193<br>
-			<details>
-<summary>Ways to submit your PDF form to the CRA</summary>
-   <h4>Online with 1 of the CRA sign in services</h4>
-
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html">My Account</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My Business Account</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></li>
-</ul>
-<h4>By fax</h4>
-<ul>
-<li><span class="nowrap">1-866-388-7371</span> from Canada or the United States.</li>
-<li><span class="nowrap">1-819-536-0701</span> from outside Canada and the United States.</li>
-</ul>
-<h4>By mail</h4>
-<p>CRA Service Feedback<br>
-National Intake Centre<br>
-4695 Shawinigan-Sud Boulevard<br>
-Shawinigan QC&nbsp; G9P 5H9<br>
-CANADA</p>
- </details>
-
-		</li>
-	</ul>-->
 			
 	 <div class="clear"></div>	
 	<h3>After you submit your service feedback</h3>
@@ -263,6 +191,8 @@ CANADA</p>
 		
 	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check the CRA processing times</a></p>
 	
+	<h2>Contact the Office of the Taxpayers' Ombudsperson</h2>
+<p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>. Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p>
 	<h2 id="toc2">Non-service feedback</h2>
 <p>These are other types of complaints or problems not related to service.</p>
 	
