--- a/cops/service-feedback/sf-2.html
+++ b/cops/service-feedback/sf-2.html
@@ -82,26 +82,8 @@
                                     
                                 </ul>
 	
-	<!--<dl class="dl-horizontal">
-<dt class="h3 mrgn-tp-0">Compliment</dt> <dd><p>Submit a positive experience you had with the CRA</p>
-</dd> <dt class="h3 mrgn-tp-0">Suggestion</dt> <dd><p>Give your idea on how to improve the CRA</p>
-</dd> <dt class="h3 mrgn-tp-0">Complaint</dt> <dd><p>Tell us about a problem you had with the CRA</p>
-</dd></dl>
-	
-	<div class="cnjnctn-type-or">
-<div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">Compliment<span class="wb-inv">: Option 1 of X</span></h4>
-<p>Submit a positive experience with the CRA</p>
-</div>
-<div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">Suggestion<span class="wb-inv">: Option 2 of X</span></h4>
-<p>Suggest an improvement for the CRA</p>
-</div>
-<div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">Complaint<span class="wb-inv">: Option 3 of X</span></h4>
-<p>Submit a complaint about the CRA</p>
-</div></div>-->
-	<div class="clear"></div>
+
+
 	
 	<h2 id="toc1">Service feedback</h2>
 
@@ -136,7 +118,7 @@
 	</ul>
 	<p>If no number is provided, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>. </p>
 </li>
-<li><h4>File a service feedback form</h4>
+<li><h4>Use the form</h4>
 <p>If calling did not address your concern, use 1 of these methods to submit a service feedback form: </p>
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
