--- a/cops/service-feedback/sf-2.html
+++ b/cops/service-feedback/sf-2.html
@@ -173,7 +173,8 @@ CANADA</p>
 		
 	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check the CRA processing times</a></p>
 	
-	<h2>Not happy with your resolution - Contact the Office of the Taxpayers' Ombudsperson</h2>
+	<h2>Not happy with your resolution</h2>
+	<h3>Office of the Taxpayers' Ombudsperson</h3>
 <p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>. Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p>
 	<h2 id="toc2">Non-service feedback</h2>
 <p>These are other types of complaints or problems not related to service.</p>
