--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -358,7 +358,7 @@
 			  
                      <li class="checkbox">
                         <input type="checkbox" id="eg4" class="action-checkbox cb-dmm">
-                        <label for="eg4">You did not live in a qualifying home that you owned or jointly owned</label>
+                        <label for="eg4"><p>You did not live in a qualifying home that you owned or jointly owned</p>
 	  <ul class="cnjnctn-type-or mrgn-tp-0">
                                     <li class="cnjnctn-col">
                                         in this calendar year
@@ -366,7 +366,7 @@
                                     </li>
                                     <li class="cnjnctn-col">
                                        in the previous 4 calendar years </li></ul>
-
+</label>
 			     <details class="mrgn-lft-lg">
                            <summary>What counts as a qualifying home</summary>
 				<p>A housing unit located in Canada. This includes existing homes and those being constructed.</p>
@@ -399,7 +399,7 @@
 		 
 		   <li class="checkbox">
                         <input type="checkbox" id="eg5" class="action-checkbox cb-dmm">
-                        <label for="eg5">Your spouse or common-law partner did not live in a qualifying home that they owned or jointly owned</label>
+                        <label for="eg5"><p>Your spouse or common-law partner did not live in a qualifying home that they owned or jointly owned</p>
 	  <ul class="cnjnctn-type-or mrgn-tp-0">
                                     <li class="cnjnctn-col">
                                         in this calendar year
@@ -407,9 +407,9 @@
                                     </li>
                                     <li class="cnjnctn-col">
                                        in the previous 4 calendar years </li></ul>
-
-                    <summary>Example: Opening an FHSA the year you turn 18</summary>
+</label>
                     <details>
+                    <summary>Example: Opening an FHSA the year you turn 18</summary>
                         <div class="mwsbodytext text parbase section">
 
     
