--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -317,7 +317,7 @@
                      <li class="checkbox">
                         <input type="checkbox" id="eg6" class="action-checkbox cb-dmm">
                         <label for="eg6">You must fill our a form and give it to your FHSA issuer</label>
-			     <p><a href="">RC725, Request to Make a Qualifying Withdrawal from your FHSA</a></p>
+			     <p class="mrgn-lft-xl mrgn-rght-md mrgn-tp-md"><a href="">RC725, Request to Make a Qualifying Withdrawal from your FHSA</a></p>
                      </li>
                     
                    
