--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -250,7 +250,7 @@
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
                         <label for="eg1">You must be a first time home buyer for the purposes of making a withdrawal</label>
-                        <details class="mrgn-lft-lg">
+                        <details class="mrgn-lft-xl mrgn-rght-md mrgn-tp-md">
                            <summary>Who counts as a first-time home buyer when making a withdrawal</summary>
                            <div class="alert alert-info">
 	<p>A &quot;first-time home buyer&quot; for the purpose of making a qualifying withdrawal is <strong>different</strong> than a &quot;first-time home buyer&quot; for the purpose of opening an FHSA.</div>
@@ -274,7 +274,7 @@
                      <li class="checkbox">
                         <input type="checkbox" id="eg2" class="action-checkbox cb-dmm">
                         <label for="eg2">You must have a written agreement to buy or build a qualifying home with the <strong>acquisition or construction completion date</strong> of the qualifying home <strong>before October 1</strong> of the year following the date of the withdrawal</label>
-                        <details class="mrgn-lft-lg">
+                        <details class="mrgn-lft-xl mrgn-rght-md mrgn-tp-md">
                            <summary>What counts as a qualifying home</summary>
 				<p>A housing unit located in Canada. This includes existing homes and those being constructed.</p>
                            
