--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -142,7 +142,7 @@
         <li><a href="#toc1">2023 - Federal rates</a></li>
         <li><a href="#toc2">2023 - Provincial and territorial rates</a> </li>
         <li><a href="#toc3">Calculate the tax</a> </li>
-        <li><a href="#toc4">Tax rates for previous years</a></li>
+        <li><a href="#toc4">Previous years</a></li>
       </ul>
     </nav>
     <!--script type="text/javascript">
@@ -281,11 +281,11 @@
         <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
           <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Taxable income</span></li>
           <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-minus fa-lg"></span><span class="wb-inv">minus </span></span><span class="text-muted h5">Base amount of the tax threshold</span> </li>
-          <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
+          <li class="bg-info"><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
           <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Tax rate</span></li>
-          <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
+          <li class="bg-info"><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
           <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-plus fa-lg"></span><span class="wb-inv">plus </span></span><span class="text-muted h5">Tax amount on the tax rate</span> </li>
-          <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Tax owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
+          <li class="bg-success"><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Tax owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
         </ul>
       </div>
     </div>
@@ -399,7 +399,7 @@
     <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html" target="_blank">T1 Income tax packages</a></p>
    
 	  
-    <h2 id="toc4">Tax rates for previous years</h2>
+    <h2 id="toc4">Previous years</h2>
     <p>Select the tax year to see the federal rate, then select the province or territory to see its rate.</p>
     <details>
       <summary>2022</summary>
