--- a/cops/service-feedback/sf-2.html
+++ b/cops/service-feedback/sf-2.html
@@ -87,7 +87,7 @@
 	
 	<h2 id="toc1">Service feedback</h2>
 
-	<h3>Options to submit service feedback</h3>
+	<h3>Ways to submit service feedback</h3>
 	
 	<ol class="lst-stps">
 <li><h4>Call the CRA</h4>
