--- a/cops/service-feedback/sf-2.html
+++ b/cops/service-feedback/sf-2.html
@@ -119,7 +119,7 @@
 	<p>If no number is provided, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>. </p>
 </li>
 <li><h4>Use the form</h4>
-<p>If calling did not address your concern, use 1 of these methods to submit a service feedback form: </p>
+<p>File your feedback using one of these methods:  </p>
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Online digital form <span class="wb-inv">: Option 1 of 2</span></h4>
@@ -154,7 +154,7 @@ CANADA</p>
 	
 </li><div class="clear"></div>
 <li><h4>Send a letter</h4>
-<p>You can send a letter to the CRA. </p> 
+<p>Write a letter and send it to the CRA. </p> 
 </li>
 </ol>
 	
