--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1292,7 +1292,7 @@ Other reason
 <script src="/etc/designs/canada/wet-boew/méli-mélo/2023-10-mount-revelstoke.min.js"></script>
 <script>
 	$(":input[type=checkbox][name=action-checkbox]").change(function() { 
-          if $(":input[type=checkbox][name=action-checkbox]:checked").length == $(":input[type=checkbox][name=action-checkbox]").length) {                
+          if ($(":input[type=checkbox][name=action-checkbox]:checked").length === $(":input[type=checkbox][name=action-checkbox]").length) {                
             $("#action-not-qualify-msg").addClass("hidden").removeClass("visible");
 	    $("#action-qualify-msg").removeClass("hidden").addClass("visible");
           } else {
