--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -139,7 +139,7 @@
     <nav role="navigation">
       <h2 class="h3">On this page</h2>
       <ul>
-	           <li><a href="#toc0">2023 - Federal rates</a></li>
+	           <li><a href="#toc0">[Purpose of page]</a></li>
         <li><a href="#toc1">2023 - Federal rates</a></li>
         <li><a href="#toc2">2023 - Provincial and territorial rates</a> </li>
         <li><a href="#toc3">Calculate the tax</a> </li>
@@ -183,7 +183,7 @@
     <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
 	  
     <h2 id="toc1">2023 - Federal rates</h2>
-	  <p>The Government of Canada sets the federal income tax rates for individuals. Each province and territory determines their own income tax rates.</p>
+	  <p>The Government of Canada sets the federal income tax rates for individuals.</p>
 	   
 	
 	  <details>
