--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -314,7 +314,7 @@
 		 <fieldset>
                   <ul class="checkbox-zebra gc-chckbxrdio">
                      <li class="checkbox">
-                        <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
+                        <input type="checkbox" id="eg1" name="action-checkbox">
                         <label for="eg1">You are 18 years of age or older</label>
                         <details class="mrgn-lft-xl mrgn-rght-md mrgn-tp-md">
                            <summary>If legal age in your province is 19 years old</summary>
@@ -323,12 +323,12 @@
                      </li>
 
   <li class="checkbox mrgn-bttm-lg">
-                        <input type="checkbox" id="eg2" class="action-checkbox cb-dmm">
+                        <input type="checkbox" id="eg2" name="action-checkbox">
                         <label for="eg2">You are 71 years or younger as of December 31 of the year</label>
                      </li>
 			  
                      <li class="checkbox">
-                        <input type="checkbox" id="eg3" class="action-checkbox cb-dmm">
+                        <input type="checkbox" id="eg3" name="action-checkbox">
                         <label for="eg3">You are a resident of Canada</label>
                         <details class="mrgn-lft-xl mrgn-rght-md mrgn-tp-md">
                            <summary>If you become a non-resident after opening an FHSA</summary>
@@ -355,7 +355,7 @@
 
 			  
                      <li class="checkbox">
-                        <input type="checkbox" id="eg4" class="action-checkbox cb-dmm">
+                        <input type="checkbox" id="eg4" name="action-checkbox">
                         <label for="eg4"><p>You did not live in a qualifying home that you owned or jointly owned</p>
 	  <ul class="cnjnctn-type-or mrgn-tp-0">
                                     <li class="cnjnctn-col">
@@ -396,7 +396,7 @@
                      </li>
 		 
 		   <li class="checkbox">
-                        <input type="checkbox" id="eg5" class="action-checkbox cb-dmm">
+                        <input type="checkbox" id="eg5" name="action-checkbox">
                         <label for="eg5"><p>Your spouse or common-law partner did not live in a qualifying home that they owned or jointly owned</p>
 	  <ul class="cnjnctn-type-or mrgn-tp-0">
                                     <li class="cnjnctn-col">
